hledger/test/errors/csvdecimalmarkparse.csv.rules
skip 2
date %1
amount %2
decimal-mark badmark
